# web

./: Cargo.toml  Rocket.toml
src/: downloads.rs  main.rs  other.rs
templates/: base.html.tera  index.html.tera  safe.html.tera  unsafe.html.tera  upload.html.tera
