[package]
name = "web"
version = "0.1.0"
authors = ["archification <archification@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_upload = "0.1.0"
rocket-multipart-form-data = "0.9.5"
rocket-include-static-resources = "0.9.5"
rocket-raw-response = "0.4.11"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates"]
